templates/stylesheets/app.css
/* COLORS */
body {
    --secondary-extra-dark: #771c29;
    --secondary-dark: #bc1141;
    --secondary-light: #e695a2;
    --secondary-extra-light:#f59db4;
    --primary-extra-dark: #0a3363;
    --primary-dark: #1b619f;
    --primary-light: #7bb3f2;
    --primary-extra-light: #9bc7ee;
    
    --page-background: #1d273a;
    --default-text: #99a2aa;
}

/* COMMON ROLES */

a {
    text-decoration: none;
    color: var(--default-text);
}
a:hover { text-decoration: revert; }

.sticky-header, .sticky-below-header { position: sticky; }
.sticky-header {
    top: calc(
        var(--banner-collapsed-height) -
        var(--banner-full-height)
    );
}
.sticky-below-header { top: var(--banner-collapsed-height) }

/* LAYOUT COMPONENTS */

body {
    /* Position */
    margin: 0;
    background-color: var(--page-background);
    color: var(--default-text);
    /* height: 100vh;
    overflow: hidden; */
    
    /* Style */
    font-family: Besley;
    --banner-full-height: 20vh;
    --banner-collapsed-height: 5vh;
    --banner-scroll-adjustment: 0px;
    --sidebar-width: 15vw;
}

#header-banner {
    width: 100%;
    height: var(--banner-full-height);
    display: flex;
    align-items: flex-end;
    justify-content: center;
    
    /* Background image is set dynamically in the template file */
    background-position: center;
    background-size: cover;
}

/* Scroll logos */
#sidebar-logo-container {
    display: flex;
    justify-content: center;
}
#sidebar-logo {
    height: var(--banner-scroll-adjustment);
    max-height: calc(var(--banner-full-height) - 1vh );
}
#header-logo {
    margin-bottom: 0.5vh;
    height: calc(
        var(--banner-full-height) -
        var(--banner-scroll-adjustment) -
        1vh
    );
}

#page-container {
    /* A big container for everything not in the header. */
    display: flex;
    flex-direction: row;
    justify-content: center;
}

.hanging-tab {
    /* Style for the sidebar and nav buttons */
    background-color: #2f3c57;
    padding: 3px 9px;
    border-radius: 0 0 8px 8px;
    margin: 0 4px;
}


#sidebar {
    min-width: var(--sidebar-width);
    margin-right: 8px;
}

#toolbar-and-content {
    min-width: 50vw;
    height: 80vh;
    position: relative;
}

#toolbar {
    /* Allow content to scroll under */
    /* position: absolute; */
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    width: 100%;
    z-index: 1;
}
#toolbar::after {
    /* Gradient background behind tabs */
    position: absolute;
    content: "";
    z-index: -1;
    width: calc(100% - 3px); /* don't hide scrollbar */
    height: 80px;
    background: linear-gradient(0, transparent, var(--page-background));
    pointer-events: none;
}

#toolbar .hanging-tab {
    font-family: Prompt;
    font-weight: 500;
    font-size: 20px;
    display: flex;
    justify-content: center;
}
#toolbar .hanging-tab { border-left: 1px solid #3d4b6a; }
#toolbar .hanging-tab:hover { background-color: #3d4b6a; }

#content {
    
}

